--- a/PUBLIC/tips.html
+++ b/PUBLIC/tips.html
@@ -14,46 +14,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/tips_RotaryPlantingMap.css">
     <!-- <script src="js/tips_RotaryPlantingMap.js"></script> -->
-    <style>
-        .tip {
-            background: url(img/tips/FqT8WjBBe6TTRNDm072ITHymvbWW.jpg) 100%;
-        }
-
-        .carousel-indicators>.round {
-            border-radius: 50%;
-            width: 0.75rem;
-            height: 0.75rem;
-            margin: 0 4px;
-        }
-
-        .xb+.xb {
-            border-top: 3px solid #fff;
-        }
-
-        .bk+.bk {
-            border-left: 1px dashed #ccc;
-        }
-
-        .w-5 {
-            width: 5%;
-        }
-
-        .yy>div {
-            border-bottom: 1px solid #ddd;
-        }
-
-        .my_size {
-            font-size: 15px;
-        }
-
-        .carousel-indicators {
-            top: 90%
-        }
-        .pagination>.active>.page-link{
-            background: #060;
-            color: #fff !important;
-        }
-    </style>
+    <link rel="stylesheet" href="css/tips.css">
 </head>
 
 <body>
@@ -2451,7 +2412,7 @@
                             <img class="d-block w-100 img-thumbnail" src="img/tips/670_446(3).jpg" alt="4th slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100 img-thumbnail" src="img/tips/670_446(4).jpg" alt="4th slide">
+                            <img class="d-block w-100 img-thumbnail" src="img/tips/670_446(4).jpg" alt="5th slide">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -2467,34 +2428,46 @@
             <p class="mb-0">编辑推荐</p>
             <div class="row">
                 <div class="col-2 bg-light py-2 bk">
-                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail" src="img/tips/260_390(13).jpg" alt="">
+                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail"
+                        src="img/tips/260_390(13).jpg" alt="">
                     <a href="#">威尔士</a><br>
-                    <button class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text-white py-2">下载阅读</button>
+                    <button
+                        class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text_white py-2">下载阅读</button>
                 </div>
                 <div class="col-2 bg-light py-2 bk">
-                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail" src="img/tips/260_390(19).jpg" alt="">
+                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail"
+                        src="img/tips/260_390(19).jpg" alt="">
                     <a href="#">波黑</a><br>
-                    <button class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text-white py-2">下载阅读</button>
+                    <button
+                        class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text_white py-2">下载阅读</button>
                 </div>
                 <div class="col-2 bg-light py-2 bk">
-                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail" src="img/tips/260_390(2).jpg" alt="">
+                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail"
+                        src="img/tips/260_390(2).jpg" alt="">
                     <a href="#">洛杉矶</a><br>
-                    <button class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text-white py-2">下载阅读</button>
+                    <button
+                        class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text_white py-2">下载阅读</button>
                 </div>
                 <div class="col-2 bg-light py-2 bk">
-                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail" src="img/tips/260_390(3).jpg" alt="">
+                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail"
+                        src="img/tips/260_390(3).jpg" alt="">
                     <a href="#">克罗地亚</a><br>
-                    <button class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text-white py-2">下载阅读</button>
+                    <button
+                        class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text_white py-2">下载阅读</button>
                 </div>
                 <div class="col-2 bg-light py-2 bk">
-                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail" src="img/tips/260_390(4).jpg" alt="">
+                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail"
+                        src="img/tips/260_390(4).jpg" alt="">
                     <a href="#">四国</a><br>
-                    <button class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text-white py-2">下载阅读</button>
+                    <button
+                        class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text_white py-2">下载阅读</button>
                 </div>
                 <div class="col-2 bg-light py-2 bk">
-                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail" src="img/tips/260_390(5).jpg" alt="">
+                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail"
+                        src="img/tips/260_390(5).jpg" alt="">
                     <a href="#">濑户内海</a><br>
-                    <button class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text-white py-2">下载阅读</button>
+                    <button
+                        class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text_white py-2">下载阅读</button>
                 </div>
             </div>
             <div class="row my-2 bg-light">
@@ -2845,18 +2818,30 @@
                             </p>
                         </div>
                         <ul class="pagination offset-3">
-                            <li class="page-item disabled"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">上一页</a></li>
-                            <li class="page-item active"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">1</a></li>
-                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">2</a></li>
-                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">3</a></li>
-                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">4</a></li>
-                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">5</a></li>
-                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">6</a></li>
-                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">7</a></li>
-                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">8</a></li>
-                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">9</a></li>
-                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">10</a></li>
-                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">下一页</a></li>
+                            <li class="page-item disabled"><a href=""
+                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1">上一页</a></li>
+                            <li class="page-item active"><a href=""
+                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1">1</a></li>
+                            <li class="page-item"><a href=""
+                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1">2</a></li>
+                            <li class="page-item"><a href=""
+                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1">3</a></li>
+                            <li class="page-item"><a href=""
+                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1">4</a></li>
+                            <li class="page-item"><a href=""
+                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1">5</a></li>
+                            <li class="page-item"><a href=""
+                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1">6</a></li>
+                            <li class="page-item"><a href=""
+                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1">7</a></li>
+                            <li class="page-item"><a href=""
+                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1">8</a></li>
+                            <li class="page-item"><a href=""
+                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1">9</a></li>
+                            <li class="page-item"><a href=""
+                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1">10</a></li>
+                            <li class="page-item"><a href=""
+                                    class="page-link rounded border-0 text-dark font-weight-bold mx-1">下一页</a></li>
                         </ul>
                     </div>
                 </div>
