--- a/PUBLIC/ami_place.html
+++ b/PUBLIC/ami_place.html
@@ -339,7 +339,7 @@
     </div>
   </div>
     <!--主题目的地-->
-    <div class="box">
+    <div class="box1">
       <h1 class="title">主题目的地</h1>
       <div class="box-tab">
         <ul class="tab">
@@ -352,13 +352,67 @@
         <span class="tab-line"></span>
         <div class="card1">
           <ul id="content7" class="content fade in">
-            <li class="d1"></li>
-            <li class="d2"></li>
-            <li class="d3"></li>
-            <li class="d4"></li>
-            <li class="d5"></li>
-            <li class="d6"></li>
-            <li class="d7"></li>
+            <li>
+              <img src="img/ami_place/02.jpg">
+              <div>
+                <h3>洛克菲勒观景台</h3>
+                <span>
+                  这里是欣赏曼哈顿天际线的绝佳位置，观景台一共有三层，不仅可以将帝国大厦、新世贸中心大楼等摩天大楼尽收眼底，向北可鸟瞰中央公园，甚至可以看到自由女神像的绰约风姿。</span>
+              </div>
+            </li>
+            <li>
+                <img src="img/ami_place/03.png">
+                <div>
+                  <h3>碎片大厦</h3>
+                  <span>
+                      天气晴朗的日子里，在碎片大厦观景台可以将伦敦市景一收眼底，伦敦眼、大本钟、泰晤士河……只描摹出城市轮廓的夕阳景色更是出众。
+                  </span>
+                </div>
+            </li>
+            <li>
+                <img src="img/ami_place/04.jpg">
+                <div>
+                  <h3>太平山</h3>
+                  <span>
+                      太平山是香港岛最高山峰，也是俯瞰香港的必到处，太平山顶可饱览维多利亚港全貌和薄扶林水塘的自然美景。
+                  </span>
+                </div>
+            </li>
+            <li>
+                <img src="img/ami_place/05.png">
+                <div>
+                  <h3>六本木新城</h3>
+                  <span>
+                      六本木Hills建成于2003年，54层楼的玻璃大厦内有200多家店铺，餐饮、购物、娱乐一应俱全，很多日本人将它当做六本木的代名词。</span>
+                </div>
+            </li>
+            <li>
+                <img src="img/ami_place/06.jpg">
+                <div>
+                  <h3>米开朗琪罗广场</h3>
+                  <span>
+                      米开朗基罗广场位于佛罗伦萨市区南端的高地上，广场雄据半山腰，坐视整个佛罗伦萨城及远处起伏不断的丘陵，气势非凡，风光无限。
+                    </span>
+                </div>
+            </li>
+            <li>
+                <img src="img/ami_place/07.png">
+                <div>
+                  <h3>象山</h3>
+                  <span>
+                      山不高，但前无屏障，台北盆地一览无遗，不仅是登高眺望的好据点，也是拍摄101高楼的绝佳地点。
+                  </span>
+                </div>
+            </li>
+            <li>
+                <img src="img/ami_place/08.jpg">
+                <div>
+                  <h3>蒙帕纳斯大楼</h3>
+                  <span>
+                      蒙帕纳斯大楼(又称蒙巴纳斯高楼)建于1972年，共59层，高209米，是巴黎市区除埃菲尔铁塔外最高的建筑，也是市区唯一的一座摩天大楼。
+                  </span>
+                </div>
+            </li>
           </ul>
           <ul id="content8" class="content fade">
             <li class="d1"></li>
@@ -399,11 +453,14 @@
         </div>
     </div>
 </body>
+<script src="js/ami.place.js"></script>
 <script>
+  /*
   //tab-line:初始化状态，获取上面span中宽度和相对有box的位置，让tab-line设置相同属性值
-  var start = $(".tab>li>span:first-child").position().left
-  var wide = $(".tab>li>span:first-child").css("width")
-  $(".tab-line").css({ "margin-left": start, "width": wide });
+  //$(`${#id} .tab>li>span:first-child"`)
+  var start = $(`.tab>li>span:first-child`).position().left
+  var wide = $(`.tab>li>span:first-child`).css("width")
+  $(`.tab-line`).css({ "margin-left": start, "width": wide });
   //使用冒泡为子元素设置鼠标进入函数
   $(".tab>li>span").on("mouseenter", function () {
     var $line = $(".tab-line");
@@ -415,9 +472,22 @@
     $line.css({ "width": wide, "margin-left": start });
     //2. 鼠标移动时下面ul跟着变化，
     var id = $span.attr("data-id");
-    $("#" + id).toggleClass("in").siblings(".content").removeClass("in");
-
+    $("#" + id).addClass("in").siblings(".content").removeClass("in");
   })
+*/
+$(".card1 li").on("mouseenter",function(){
+  var $divs=$(this);
+  $divs.children(":last-child").css({
+    "margin-top":0,
+    "background":"rgba(0,0,0,.5)"
+  })
+})
+.on("mouseleave",function(){
+  var $divs=$(this);
+  $divs.children(":last-child").first().css({"margin-top":"150%","background":"rgba(0,0,0,0)"})
+  .siblings({"margin-top":"60%","background":"rgba(0,0,0,0)"});
+})
+
 </script>
 
 </html>
