--- a/PUBLIC/index1.html
+++ b/PUBLIC/index1.html
@@ -10,7 +10,7 @@
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/comm.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index1.css">
 </head>
 <body>
     <div class="container-fluid">
@@ -170,8 +170,8 @@
                         <img src="img/index/480x3204.jpg">
                         <a class="bod-info"href=""></a>
                     </div>
-                    <div class="detail-info">
-                        <h6>
+                    <div class="detail-text">
+                        <h6 class="title">
                             <a href="">[09月11日]地中海邮轮辉煌号上海往返横滨等4天3晚邮轮之旅</a>
                         </h6>
                         <p>
@@ -187,8 +187,8 @@
                          <img src="img/index/480x3204.jpg">
                          <a class="bod-info"href=""></a>
                      </div>
-                     <div class="detail-info">
-                         <h6>
+                     <div class="detail-text">
+                         <h6 class="title">
                              <a href="">[09月11日]地中海邮轮辉煌号上海往返横滨等4天3晚邮轮之旅</a>
                          </h6>
                          <p>
@@ -204,8 +204,8 @@
                          <img src="img/index/480x3204.jpg">
                          <a class="bod-info"href=""></a>
                      </div>
-                     <div class="detail-info">
-                         <h6>
+                     <div class="detail-text">
+                         <h6 class="title">
                              <a href="">[09月11日]地中海邮轮辉煌号上海往返横滨等4天3晚邮轮之旅</a>
                          </h6>
                          <p>
@@ -221,8 +221,8 @@
                          <img src="img/index/480x3204.jpg">
                          <a class="bod-info"href=""></a>
                      </div>
-                     <div class="detail-info">
-                         <h6>
+                     <div class="detail-text">
+                         <h6 class="title">
                              <a href="">[09月11日]地中海邮轮辉煌号上海往返横滨等4天3晚邮轮之旅</a>
                          </h6>
                          <p>
@@ -238,8 +238,8 @@
                          <img src="img/index/480x3204.jpg">
                          <a class="bod-info"href=""></a>
                      </div>
-                     <div class="detail-info">
-                         <h6>
+                     <div class="detail-text">
+                         <h6 class="title">
                              <a href="">[09月11日]地中海邮轮辉煌号上海往返横滨等4天3晚邮轮之旅</a>
                          </h6>
                          <p>
@@ -257,23 +257,104 @@
                 <h1>穷游商城
                     <button class="reload">换一换</button>
                 </h1>
-                <div class="storms">
+                <div class="details">
                     <div class="storm-detail">
                     <a href="">
-                        <div class="storm-img">
+                        <div class="detail-img">
                             <img src="img/index/300x3001.jpg">
-                            <a class="bod-remind"href="">
+                            <a class="bod-remind" href="">
                                 <span>距结束 11 天</span>
                             </a>
                         </div>
-                        <div class="storm-info">
-
+                        <div class="detail-text">
+                            <h6 class="title">上海往返 墨西哥+古巴+巴哈马+牙买加+巴拿马+哥</h6>
+                            <button>APP立减1000元</button>
+                            <a>￥<span>72800</span>元起</a>
+                        </div>
+                    </a>
+                    </div>
+                    <div class="storm-detail">
+                    <a href="">
+                        <div class="detail-img">
+                            <img src="img/index/300x3001.jpg">
+                            <a class="bod-remind" href="">
+                                <span>距结束 11 天</span>
+                            </a>
+                        </div>
+                        <div class="detail-text">
+                            <h6 class="title">上海往返 墨西哥+古巴+巴哈马+牙买加+巴拿马+哥</h6>
+                            <button>APP立减1000元</button>
+                            <a>￥<span>72800</span>元起</a>
+                        </div>
+                    </a>
+                    </div>
+                    <div class="storm-detail">
+                    <a href="">
+                        <div class="detail-img">
+                            <img src="img/index/300x3001.jpg">
+                            <a class="bod-remind" href="">
+                                <span>距结束 11 天</span>
+                            </a>
+                        </div>
+                        <div class="detail-text">
+                            <h6 class="title">上海往返 墨西哥+古巴+巴哈马+牙买加+巴拿马+哥</h6>
+                            <button>APP立减1000元</button>
+                            <a>￥<span>72800</span>元起</a>
+                        </div>
+                    </a>
+                    </div>
+                    <div class="storm-detail">
+                    <a href="">
+                        <div class="detail-img">
+                            <img src="img/index/300x3001.jpg">
+                            <a class="bod-remind" href="">
+                                <span>距结束 11 天</span>
+                            </a>
+                        </div>
+                        <div class="detail-text">
+                            <h6 class="title">上海往返 墨西哥+古巴+巴哈马+牙买加+巴拿马+哥</h6>
+                            <button>APP立减1000元</button>
+                            <a>￥<span>72800</span>元起</a>
+                        </div>
+                    </a>
+                    </div>
+                    <div class="storm-detail">
+                    <a href="">
+                        <div class="detail-img">
+                            <img src="img/index/300x3001.jpg">
+                            <a class="bod-remind" href="">
+                                <span>距结束 11 天</span>
+                            </a>
+                        </div>
+                        <div class="detail-text">
+                            <h6 class="title">上海往返 墨西哥+古巴+巴哈马+牙买加+巴拿马+哥</h6>
+                            <button>APP立减1000元</button>
+                            <a>￥<span>72800</span>元起</a>
+                        </div>
+                    </a>
+                    </div>
+                    <div class="storm-detail">
+                    <a href="">
+                        <div class="detail-img">
+                            <img src="img/index/300x3001.jpg">
+                            <a class="bod-remind" href="">
+                                <span>距结束 11 天</span>
+                            </a>
+                        </div>
+                        <div class="detail-text">
+                            <h6 class="title">上海往返 墨西哥+古巴+巴哈马+牙买加+巴拿马+哥</h6>
+                            <button>APP立减1000元</button>
+                            <a>￥<span>72800</span>元起</a>
                         </div>
                     </a>
                     </div>
                 </div>
+                <div class="more-detail">
+                    <button>查看更多商品</button>
+                </div>
             </div>
         </div>
+        <!--游记 话题-->
     </section>
     </div>
 </body>
