--- a/PUBLIC/index1.html
+++ b/PUBLIC/index1.html
@@ -544,6 +544,64 @@
                 <button>查看更多游记</button>
             </div>
         </div>
+        <!--特别策划-->
+        <div class="special-plan">
+            <div class="my-width">  
+            <div class="details">
+                <div class="qy-hall">
+                    <h4>穷游体验馆</h4>
+                    <div class="detail-img">
+                            <img src="img/index/300x3002.jpg">
+                            <p>申请已结束</p>
+                            <a class="bod-remind" href="">
+                                <span>免费体验名额20个</span>
+                            </a>
+                    </div>
+                    <div class="detail-text">
+                        <h5>穿越时空的旅行者</h5>
+                        <p class="price-detail">
+                            <a href="">
+                                价值<span>499</span>元
+                            </a>
+                            <a href="">查看详情</a>
+                        </p>
+                        <ul class="avatar-wheel">
+                            <li>近期参与</li>
+                            <li><img src="img/index/200(1).jpg"></li>
+                            <li><img src="img/index/200(2).jpg"></li>
+                            <li><img src="img/index/200(3).jpg"></li>
+                            <li><img src="img/index/200(4).jpg"></li>
+                            <li><img src="img/index/200(5).jpg"></li>
+                        </ul>
+                    </div>
+                    <p class="more-detail"><button>查看往期</button></p>
+                </div>
+                <ul class="qy-plan">
+                    <h4>
+                        特别策划
+                        <a href="">查看全部></a>
+                    </h4>
+                    <ul class="detail-img">
+                        <li class="dimg-1">
+                            <div></div>
+                        </li>
+                        <li class="dimg-2">
+                            <div></div>
+                        </li>
+                        <li class=dimg-3>
+                            <div></div>
+                        </li>
+                        <li class="dimg-4">
+                            <div></div>
+                        </li>
+                        <li class="dimg-5">
+                            <div></div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+        </div>
     </section>
     </div>
 </body>
