--- a/PUBLIC/index1.html
+++ b/PUBLIC/index1.html
@@ -155,7 +155,7 @@
                 </a>
             </div>
         </div>
-        <!--今日推荐-->
+        <!-- 今日推荐 .recom-today -->
         <div class="my-width recom-today">
             <h1>
                <a class="bod-info" href="">
@@ -251,7 +251,7 @@
                 </div>
             </div>
         </div>
-        <!--穷游商城-->
+        <!-- 穷游商城 .qy-storm -->
         <div class="qy-storm">
             <div class="my-width">
                 <h1>穷游商城
@@ -367,7 +367,7 @@
                 </div>
             </div>
         </div>
-        <!--游记 话题-->
+        <!-- 游记 话题 .travel-topic-->
         <div class="my-width travel-topic">
             <h1>热门游记与话题</h1>
             <div class="details">
@@ -544,7 +544,7 @@
                 <button>查看更多游记</button>
             </div>
         </div>
-        <!--特别策划-->
+        <!-- 特别策划 .special-plan-->
         <div class="special-plan">
             <div class="my-width">  
             <div class="details">
@@ -576,31 +576,171 @@
                     </div>
                     <p class="more-detail"><button>查看往期</button></p>
                 </div>
-                <ul class="qy-plan">
+                <div class="qy-plan">
                     <h4>
                         特别策划
                         <a href="">查看全部></a>
                     </h4>
                     <ul class="detail-img">
                         <li class="dimg-1">
-                            <div></div>
+                            <div>
+                                <img src="img/index/e6c5"><br>
+                                <span>地球研习社</span>
+                            </div>
                         </li>
                         <li class="dimg-2">
-                            <div></div>
+                            <div>
+                                <img src="img/index/44c2"><br>
+                                <span>上瘾团</span>
+                            </div>
                         </li>
                         <li class=dimg-3>
-                            <div></div>
+                            <div>
+                                <img src="img/index/44c2"><br>
+                                <span>地球研习社</span>
+                            </div>
                         </li>
                         <li class="dimg-4">
-                            <div></div>
+                            <div>
+                                <img src="img/index/44c2"><br>
+                                <span>年轻计划</span>
+                            </div>
                         </li>
                         <li class="dimg-5">
-                            <div></div>
+                            <div>
+                                <img src="img/index/44c2"><br>
+                                <span>地球研习社</span>
+                            </div>
                         </li>
                     </ul>
                 </div>
             </div>
+            </div>
+        </div>
+        <!-- 二维码图片 .ewm-load -->
+        <div class="ewm-load my-width">
+            <ul>
+                <li>穷游APP</li>
+                <li>
+                    <img src="img/index/qyapp.png"><br>
+                    <span>穷游APP</span>
+                </li>
+                <li>
+                    <img src="img/index/xczs.png"><br>
+                    <span>行程助手</span>
+                </li>
+                <li>
+                    <img src="img/index/qyjr.png"><br>
+                    <span>穷游锦囊</span>
+                </li>
+            </ul>
+            <ul>
+                <li>微信</li>
+                <li>
+                    <img src="img/index/ewmload1"><br>
+                    <span>穷游网</span>
+                </li>
+                <li>
+                    <img src="img/index/eweload2"><br>
+                    <span>穷游最世界</span>
+                </li>
+                <li>
+                    <img src="img/index/ewmload3"><br>
+                    <span>穷游锦囊</span>
+                </li>
+                <li>
+                    <img src="img/index/ewmload4"><br>
+                    <span>行程助手</span>
+                </li>
+            </ul>
+        </div>
+        <!-- 底部文字   .foot-text -->
+        <div class="foot-text">
+            <ul class="my-width">
+               <li>
+                    <a href="">关于我们</a>
+                    <a href="">穷游简介</a>
+                    <a href="">联系我们</a>
+                    <a href="">合作伙伴</a>
+                </li>
+               <li>
+                    <a href="">加入穷游</a>
+                    <a href="">招聘职位</a>
+               </li>
+               <li>
+                    <a href="">网站条款</a>
+                    <a href="">会员条款</a>
+                    <a href="">社区指南</a>
+                    <a href="">版权声明</a>
+                    <a href="">免责声明</a>
+               </li>
+               <li>
+                    <a href="">帮助中心</a>
+                    <a href="">新手上路</a>
+                    <a href="">使用帮助</a>
+                    <a href="">网站地图</a>
+                    <a href="">旅行工具</a>
+               </li>
+            </ul>
+        </div>
+        <!-- 底部商标   .foot-brand -->
+        <div class="foot-brand">
+        <div class="my-width foot-link">
+            <ul>
+                <li><img src="img/index/foot_logo" alt=""></li>
+                <li>
+                    <p>2004-2019 © 穷游网® qyer.com All rights reserved. Version v5.57  京ICP备12003524号  京公网安备11010102001935  京ICP证140673号  营业执照  经营许可证</p>
+                    <p>穷游网为旅行者提供原创实用的出境游旅行指南和旅游攻略、旅行社区和问答交流平台，并提供签证、保险、机票、酒店预订、租车等服务。</p>
+                </li>
+                <li>
+                    <img src="img/index/cx_link1">
+                    <img src="img/index/trustutn_large.jpg">
+                </li>
+            </ul>
             <div>
+                <p>友情链接</p>
+                <p>
+                    <a href="http://www.dazijia.com/" target="_blank">大自驾网</a>
+                    <a href="https://bbs.qyer.com/thread-3223352-1.html" target="_blank">凤凰古城住宿推荐</a>
+                    <a href="https://bj.lianjia.com/" target="_blank">北京房产</a>
+                    <a href="http://tool.qyer.com/qtag" target="_blank">信息聚合</a>
+                    <a href="http://www.meishubao.com" target="_blank">美术教育</a>
+                    <a href="http://www.jiaotongjie.com" target="_blank">中国交通网</a>
+                    <a href="http://www.changtu.com" target="_blank">长途汽车票</a>
+                    <a href="http://www.wandoujia.com" target="_blank">豌豆荚安卓市场</a>
+                    <a href="http://travel.ifeng.com/" target="_blank">凤凰网旅游</a>
+                    <a href="http://www.caissa.com.cn/" target="_blank">凯撒旅游</a>
+                    <a href="http://www.zuche.com/" target="_blank">神州租车</a>
+                    <a href="http://you.ctrip.com/" target="_blank">携程攻略社区</a>
+                    <a href="http://www.fengniao.com/" target="_blank">蜂鸟网</a>
+                    <a href="http://www.tianxun.com/" target="_blank">天巡国际机票</a>
+                    <a href="http://www.youpu.cn" target="_blank">游谱旅行网 </a>
+                    <br>
+                    <a href="http://www.qianzhengdaiban.com/" target="_blank">中国签证资讯网</a>
+                    <a href="http://www.dreams-travel.com/" target="_blank">梦之旅</a>
+                    <a href="http://www.9tour.cn/" target="_blank">九游网</a>
+                    <a href="http://www.zglxw.com/" target="_blank">北京国旅官网</a>
+                    <a href="http://www.ly.com/" target="_blank">同程旅游</a>
+                    <a href="http://www.meet99.com/" target="_blank">相约久久旅游网</a>
+                    <a href="http://www.tuniu.com/" target="_blank">途牛旅游网</a>
+                    <a href="http://www.mayi.com/" target="_blank">日租房</a>
+                    <a href="http://www.aoyou.com" target="_blank">遨游网</a>
+                    <a href="http://vacations.ctrip.com/" target="_blank">携程旅游网</a>
+                    <a href="http://www.8264.com/" target="_blank">户外资料网</a>
+                    <a href="http://www.ailvxing.com/" target="_blank">爱旅行网</a>
+                    <a href="http://www.114piaowu.com/" target="_blank">火车票</a>
+                    <a href="http://www.lvye.cn/" target="_blank">绿野网</a>
+                    <a href="http://www.tianqi.com/" target="_blank">天气预报15天查询</a>
+                    <a href="http://www.eueueu.com/" target="_blank">走遍欧洲</a>
+                    <a href="http://www.zhuna.cn/" target="_blank">酒店预订</a>
+                    <br>
+                    <a href="http://www.cncn.com/" target="_blank">欣欣旅游网</a>
+                    <a href="http://www.lvmama.com" target="_blank">驴妈妈旅游网</a>
+                    <a href="http://www.yododo.cn/" target="_blank">多多驿站</a>
+                    <a href="http://trip.elong.com/" target="_blank">艺龙旅游指南</a>
+                </p>
+            </div>
+        </div>
         </div>
     </section>
     </div>
